{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "b4c86fb8-0363-450f-a2ee-8e54a2020a70",
            "actions": [
                {
                    "name": "MouseMoveAndInteract",
                    "type": "Button",
                    "id": "ef42e1e1-64ea-4638-8e60-d18d3bb16dd3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractionButton",
                    "type": "Button",
                    "id": "aafde643-6ad6-45d0-bf79-52567d7485bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eb222c42-99f8-4888-a8a2-b87ce97b50a6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMoveAndInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ced0de56-fd1a-4beb-8f57-0f5477659565",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractionButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}